fixed layout overflow errors and added users to chatview

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -2,6 +2,7 @@ html, body {
   height: 100%;
   margin: 0;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 /* For Firefox */
@@ -16,4 +17,44 @@ html {
 
 #wrapper {
   min-height: 100%; 
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f1f1f1;
+}
+
+*::-moz-scrollbar {
+  width: 6px;
+}
+
+*::-moz-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+*::-moz-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 3px;
+}
+
+*::-moz-scrollbar-thumb:hover {
+  background-color: #555;
 }
